--- a/src/botao/index.html
+++ b/src/botao/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>Novo botão</h1>
     <button type="button" onclick="pop()">pop</button>
 
     <script src="scripts.js"></script>
