alteração 2 dashboard chat

--- a/src/dashboard-chat/dashboard-chat.html
+++ b/src/dashboard-chat/dashboard-chat.html
@@ -1,2 +1,3 @@
 <h1>dashboard-chat.html - criação</h1>
-<h1>dashboard-chat.html - alteração</h1>
+<h1>dashboard-chat.html - alteração 1</h1>
+<h1>dashboard-chat.html - alteração 2</h1>
