--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -2,3 +2,5 @@ home<br />
 <dashboard-home></dashboard-home>
 menu<br />
 <dashboard-menu></dashboard-menu>
+chat !!!<br />
+<dashboard-chat></dashboard-chat>
